--- a/Wargame/Wargame.csproj
+++ b/Wargame/Wargame.csproj
@@ -74,6 +74,8 @@
     <Compile Include="GameFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vendor\Item.cs" />
+    <Compile Include="Vendor\Items\Weapon.cs" />
     <EmbeddedResource Include="BattleForm.resx">
       <DependentUpon>BattleForm.cs</DependentUpon>
     </EmbeddedResource>
