--- a/Wargame/Wargame.csproj
+++ b/Wargame/Wargame.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Armor.cs" />
+    <Compile Include="Vendor\Items\Armor.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="BattleForm.cs">
       <SubType>Form</SubType>
