--- a/Wargame/Wargame.csproj
+++ b/Wargame/Wargame.csproj
@@ -62,22 +62,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IItem.cs" />
+    <Compile Include="Characters\CharacterInventory.cs" />
+    <Compile Include="Characters\Classes\Mage.cs" />
+    <Compile Include="Characters\Classes\Priest.cs" />
+    <Compile Include="Characters\Classes\Soldier.cs" />
+    <Compile Include="Characters\Classes\Thief.cs" />
+    <Compile Include="Vendor\IItem.cs" />
     <Compile Include="Vendor\Items\Armor.cs" />
-    <Compile Include="Character.cs" />
+    <Compile Include="Characters\Character.cs" />
     <Compile Include="BattleForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="BattleForm.Designer.cs">
       <DependentUpon>BattleForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DiceRoll.cs" />
-    <Compile Include="GameData.cs" />
-    <Compile Include="GameEngine.cs" />
-    <Compile Include="GameFactory.cs" />
+    <Compile Include="Core\DiceRoll.cs" />
+    <Compile Include="Core\GameData.cs" />
+    <Compile Include="Core\GameEngine.cs" />
+    <Compile Include="Core\GameFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stat.cs" />
+    <Compile Include="Characters\Stat.cs" />
     <Compile Include="Vendor\Items\Weapon.cs" />
     <EmbeddedResource Include="BattleForm.resx">
       <DependentUpon>BattleForm.cs</DependentUpon>
