Major class update. Class-specific stat modifiers, dynamic dice roll based on character props, and more

--- a/Wargame/Wargame.csproj
+++ b/Wargame/Wargame.csproj
@@ -67,7 +67,8 @@
     <Compile Include="Characters\Classes\Priest.cs" />
     <Compile Include="Characters\Classes\Soldier.cs" />
     <Compile Include="Characters\Classes\Thief.cs" />
-    <Compile Include="Vendor\IItem.cs" />
+    <Compile Include="Characters\Classes\Witcher.cs" />
+    <Compile Include="Vendor\Item.cs" />
     <Compile Include="Vendor\Items\Armor.cs" />
     <Compile Include="Characters\Character.cs" />
     <Compile Include="BattleForm.cs">
