--- a/Wargame/Wargame.csproj
+++ b/Wargame/Wargame.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Characters\Stat.cs" />
+    <Compile Include="Vendor\Items\HealingPotion.cs" />
     <Compile Include="Vendor\Items\Weapon.cs" />
     <EmbeddedResource Include="BattleForm.resx">
       <DependentUpon>BattleForm.cs</DependentUpon>
