Added connections config template

--- a/HourOfCode/HourOfCode.csproj
+++ b/HourOfCode/HourOfCode.csproj
@@ -206,6 +206,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="connections.config" />
+    <Content Include="connectiontemplate.config" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
